# gcp-cost-estimator

./: .gitignore  CLAUDE.md  GEMINI.md  NOTICE  README.md  clean-code.md  debt-mitigation-plan.md  gcp-billing-mcp-server-architecture.md  gcp-cost-estimator-server-architecture.md  mitigation-plan-chunks.md  mitigation-plan-overview.md  pyproject.toml  services.md  solid.md  tech-debt-and-roadmap.md
.github/workflows/: ci.yml
scenarios/: README.md
scenarios/scenario_10_webapp_stack/: main.tf
scenarios/scenario_11_ml_workload/: main.tf
scenarios/scenario_12_what_if_upgrade/: main.tf
scenarios/scenario_13_highcpu_batch_fleet/: main.tf
scenarios/scenario_14_partial_failure/: main.tf
scenarios/scenario_15_gke_cluster/: main.tf
scenarios/scenario_16_bigquery_dataset/: main.tf
scenarios/scenario_17_combined_tier1/: main.tf
scenarios/scenario_18_nl_description/: README.md
scenarios/scenario_1_single_vm/: main.tf
scenarios/scenario_2_multiple_vms/: main.tf
scenarios/scenario_3_unpriced_resources/: main.tf
scenarios/scenario_4_unresolved_vars/: main.tf
scenarios/scenario_5_multi_vm_mixed_families/: main.tf
scenarios/scenario_6_preemptible_vm/: main.tf
scenarios/scenario_7_custom_machine_type/: main.tf
scenarios/scenario_8_region_comparison/: main.tf
scenarios/scenario_9_shared_core_vms/: main.tf
tests/: conftest.py  coverage_data  test_advisory.py  test_bq_calc.py  test_bq_compare.py  test_bq_estimate.py  test_bq_iac.py  test_bq_mapper.py  test_bq_validate.py  test_cache.py  test_calc.py  test_catalog.py  test_compare.py  test_estimate.py  test_gcp.py  test_gcp_alloydb.py  test_gcp_alloydb_iac.py  test_gcp_appengine_iac.py  test_gcp_appengine_mapper.py  test_gcp_appengine_validate.py  test_gcp_armor.py  test_gcp_artifact_registry.py  test_gcp_artifact_registry_iac.py  test_gcp_bigtable.py  test_gcp_bigtable_iac.py  test_gcp_cdn.py  test_gcp_dataflow.py  test_gcp_dataproc.py  test_gcp_dns.py  test_gcp_fetch.py  test_gcp_filestore.py  test_gcp_filestore_iac.py  test_gcp_firestore.py  test_gcp_firestore_iac.py  test_gcp_function_iac.py  test_gcp_function_mapper.py  test_gcp_function_validate.py  test_gcp_memorystore.py  test_gcp_memorystore_iac.py  test_gcp_nat.py  (+55 more)
tests/fixtures/: alloydb_cost_cases.json  alloydb_estimate_golden.json  alloydb_skus.json  bq_skus.json  (+41 more)
(+162 files in other folders)
