[project]
name = "gcp-billing-mcp"
version = "0.1.0"
description = "GCP Billing MCP Server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=0.1.0",
    "pydantic>=2.6.0",
    "python-hcl2>=4.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gcp_billing_mcp"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "E501"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--cov=gcp_billing_mcp --cov-branch"
markers = [
    "integration: marks tests as integration tests",
]

